k9s_project/infra/network/allow-app-ingress-from-envoy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-envoy
  namespace: app
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: infra-gateways
            app.kubernetes.io/name: envoy
            app.kubernetes.io/component: proxy
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
